added update event api endpoint and audit logging
